Parameterized ScriptConvertible